--- a/CSS/JSLife.css
+++ b/CSS/JSLife.css
@@ -12,14 +12,15 @@ h1 {
   line-height: 58px;
   margin: 0 0 58px; }
 
-p {
+p, li {
   color: #adb7bd;
   font-family: 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
   line-height: 26px;
-  text-indent: 30px;
 }
-
+ul {
+  list-style-type: none;
+}
 a {
   color: #fe921f;
   text-decoration: underline;
@@ -33,7 +34,9 @@ a:hover {
 
 
 
-
+#indent {
+  text-indent: 30px;
+}
 .Date {
   background: #fe921f;
   color: #ffffff;
@@ -62,6 +65,7 @@ text-transform: uppercase;
   position: relative;
   left: 80%;
   top: 20px;
+  margin-bottom: 140px;
 }
 
 .Btn01-A {
@@ -85,7 +89,6 @@ text-transform: uppercase;
 .Btn01-A:hover {
   background: #434343;
   letter-spacing: 1px;
-  width: 120px;
   text-align: center;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
