--- a/CSS/JSLife.css
+++ b/CSS/JSLife.css
@@ -9,18 +9,19 @@ body {
   clear: both;
   display: table;
 }
+body {
+  font-family: 'Lato', sans-serif;
+}
 
 h1 {
   color: #ffffff;
-  font-family: 'Lato', sans-serif;
   font-size: 54px;
   font-weight: 300;
   line-height: 58px;
-  margin: 0 0 58px; }
-
+  margin: 0 0 58px;
+}
 p, li {
   color: #adb7bd;
-  font-family: 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
   line-height: 26px;
 }
