--- a/CSS/CourseTemplate.css
+++ b/CSS/CourseTemplate.css
@@ -10,24 +10,6 @@ body {
 
 
 
-.Btn02 {
-  width: 120px;
-  background: red;
-  padding: 10px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  color: white;
-  font-weight: bold;
-}
-
-.Btn02:hover {
-  background: #e60000;
-  border-radius: 6px;
-  font-weight: bolder;
-}
-
-
       /* ------ */
       /* Course */
       /* ------ */
@@ -132,35 +114,25 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .CourseTemp-Right {
-  position: relative;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 40px;
+
   float: right;
-  right: 60px;
-  top: 50px;
+  right: 160px;
+
   background: white;
   text-align: center;
   width: 370px;
-  height: 700px;
+  height: auto;
   border-radius: 10px;
 
   box-shadow: 7px 10px 29px -10px rgba(0,0,0,0.75);
   -webkit-box-shadow: 7px 10px 29px -10px rgba(0,0,0,0.75);
   -moz-box-shadow: 7px 10px 29px -10px rgba(0,0,0,0.75);
 }
+
     .Course-Pic {
       position: relative;
       margin: 0 auto;
@@ -174,8 +146,10 @@ body {
     }
     .Course-Price {
       position: relative;
+      height: 60px;
       margin-top: 20px;
-      Width: 98%;
+      Width: 100%;
+      margin-bottom: 15px;
     }
       .Course-Price h1 {
         color: rgb(80, 87, 99);
@@ -183,30 +157,169 @@ body {
         font-weight: bold;
         font-size: 2.4em;
       }
-      .Course-Btns{
 
-      }
+    .Course-Btns{
+      height: auto;
+      margin-bottom: 20px;
+    }
+        .Btn02 {
+          width: 120px;
+          background: #e60000;
+          padding: 10px;
+          margin: 0 auto;
+          margin-bottom: 10px;
+          border-radius: 4px;
+          color: white;
+          font-weight: bold;
+        }
+
+        .Btn02:hover {
+          background: rgb(204, 51, 51);
+          border-radius: 6px;
+          font-weight: bolder;
+        }
 
 
       /* Includes */
+      .Course-includes {
+        margin: 30px 0;
+      }
+
       .Course-includes p {
         position: relative;
         color: black;
         font-size: 0.9em;
         margin-bottom: -10px;
       }
-      .Course-includes ul {
-        list-style-type: none;
-        text-align: left;
-      }
-
       .Course-includes li {
           font-size: 0.9em;
           color: rgb(80, 87, 99);
-          text-indent: -40px;
           text-align: center;
+          margin-left: -40px;
       }
 
+      /* Share Me */
+      .ShareMe {
+        position: relative;
+        background: darkred;
+        height: 60px;
+        line-height: 60px;
+      }
+
+
+
+
+
+
+
+
+
+
+
+/* Ribbon */
+      .ribbon-wrapper {
+        position: relative;
+        z-index:998;
+        height: 100px;
+        background: whitesmoke;
+      }
+
+     .ribbon-front {
+       background-color: #cc3333;	height: 50px;
+       width: 390px;
+       height: 65px;
+       position: relative;
+       left:-10px;
+       z-index: 2; font:20px/50px bold Verdana, Geneva, sans-serif; color:#f8f8f8; text-align:center;text-shadow: 0px 1px 2px #cc6666;
+     }
+
+     .ribbon-front,
+     .ribbon-back-left,
+     .ribbon-back-right {
+        position: relative;
+        line-height: 65px;
+        font-weight: bold;
+
+       -moz-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+       -khtml-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+       -webkit-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+       -o-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+      }
+      .ribbon-front a {
+        text-decoration: none;
+        color: white;
+      }
+
+     .ribbon-edge-topleft,
+     .ribbon-edge-topright,
+     .ribbon-edge-bottomleft,
+     .ribbon-edge-bottomright {
+       position: absolute;
+       z-index: 1;
+       border-style:solid;
+       height:0px;
+       width:0px;
+      }
+
+     .ribbon-edge-topleft,
+     .ribbon-edge-topright {
+    }
+
+     .ribbon-edge-bottomleft,
+     .ribbon-edge-bottomright {
+     top: 50px;
+    }
+
+     .ribbon-edge-topleft,
+     .ribbon-edge-bottomleft {
+       left: -10px;
+       border-color: transparent #9B1724 transparent transparent;
+    }
+
+     .ribbon-edge-topleft {
+       top: -5px;
+       border-width: 5px 10px 0 0;
+    }
+     .ribbon-edge-bottomleft {
+       border-width: 0 10px 0px 0;
+      }
+
+     .ribbon-edge-topright,
+     .ribbon-edge-bottomright {
+       left: 370px;
+       top: 64px;
+       border-color: transparent transparent transparent #9B1724;
+      }
+
+     .ribbon-edge-topright {
+       top: 0px;
+       border-width: 0px 0 0 10px;
+     }
+     .ribbon-edge-bottomright {
+       border-width: 0 0 5px 10px;
+      }
+
+      /* Glow Animation */
+        @-webkit-keyframes flow {
+         0% { left:-20px;opacity: 0;}
+         50% {left:100px;opacity: 0.3;}
+           100%{ left:180px;opacity: 0;}
+        }
+        @keyframes flow {
+         0% { left:-20px;opacity: 0;}
+         50% {left:100px;opacity: 0.3;}
+           100%{ left:180px;opacity: 0;}
+        }
+
+        .glow{ background: rgb(255,255,255); width:40px; height:100%; z-index:999; position:absolute;-webkit-animation: flow 1.5s linear infinite;-moz-animation: flow 1.5s linear infinite;-webkit-transform: skew(20deg);
+            -moz-transform: skew(20deg);
+              -o-transform: skew(20deg);background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(1%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,1) 100%); /* IE10+ */
+        background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 1%,rgba(255,255,255,1) 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */ border-left:1px solid #fff;}
 
 
 
